# fastapi_authorization

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 07add1eddb39_second.py  4906aa76b865_first.py  991c83736bd5_.py  c3bd4eb3ecab_users_update.py  dd2a50615d1c_added_role_id_to_users_table.py
scripts/: run_app.sh
src/: database.py  dependencies.py  jwt_service.py  security.py  settings.py
src/core/: ressource_access.py
src/dao/: resource_dao.py  role_dao.py  rules_dao.py  session_dao.py  user_dao.py
src/models/: models.py
src/routes/web/: resources.py  users.py
src/schemas/: api_schema.py  db_schema.py
src/scripts/: run_app.sh
