[project]
name = "fastapi-authorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.136.3",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
